--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build": "npm run export",
+    "export": "next build && next export",
+    "deploy": "yarn build && next export"
   },
   "dependencies": {
     "next": "12.0.4",
